syntax = "proto3";

option java_multiple_files = true;
package rubble;

service RubbleKvStoreService {
  //an internal rpc call used by the primary 
  rpc Sync (SyncRequest) returns (SyncReply) {} 
  rpc Put(stream PutRequest) returns (stream PutReply){}
  rpc Get(stream GetRequest) returns (stream GetReply){}
}

message SyncRequest {
  // a json string of args
  string  args = 1;
}

message SyncReply {
  string message = 1;
}

// The Get request containing a key.
message GetRequest {
  string key = 1;
}

// The Get response containing the status and returned value for the key if key exists
message GetReply {
  bool   ok = 1;
  string status = 2;
  string  value = 3;
}

// The Put request containing a key-value pair.
message PutRequest {
  string key = 1;
  string value = 2;
}

// The Put reply containing the reply status indicating whether the put succeeds
message PutReply {
    bool ok = 1;
    string status = 2;
}
